<resources>
    <string name="app_name">Template Application</string>

    <!-- General -->
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis placerat magna eu semper. Donec sagittis <a href="https://developer.android.com/guide/topics/ui/themes.html">pharetra</a> rhoncus.</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="settings">Settings</string>
    <string name="none">None</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- General Errors -->
    <string name="networking_error">Networking error has occurred.</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_cannot_be_blank">Username cannot be blank</string>
    <string name="invalid_email_address">Invalid e-mail address</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
    <string name="invalid_login">Invalid username and password</string>

    <!-- Forgot Password -->
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="email_cannot_be_blank">Email cannot be blank</string>
    <string name="password_was_reset">Password was reset.</string>

    <!-- Test Page -->
    <string name="calculate">Calculate</string>

    <!-- Themes -->
    <string name="theme_name_droid">Droid</string>
    <string name="theme_desc_droid">Android Default</string>
    <string name="theme_name_tokyo">Tokyo</string>
    <string name="theme_desc_tokyo">Light</string>
    <string name="theme_name_illini">Illini</string>
    <string name="theme_desc_illini">Dark</string>
    <string name="theme_name_sea_foam">Sea Foam</string>
    <string name="theme_desc_sea_foam">Light, dark action bar</string>

    <!-- Theme Viewing -->
    <string name="title_text_appearances">Text Appearances</string>
    <string name="title_palette">Palette</string>
    <string name="title_widgets">Widgets</string>
    <string name="tab_title_current_theme">Overview</string>
    <string name="tab_title_other_themes">Other Themes</string>
    <string name="primary">Primary</string>
    <string name="primary_dark">Primary Dark</string>
    <string name="accent">Accent</string>
    <string name="normal">Normal</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="sample_text_summary">TextAppearances are styles applied specific to text. Android provides different text colors attributes that can be set in your custom theme and will be used with different text appearances. The value of a textColor can either be a simple color or a selector.</string>
    <string name="sample_text_primary">android:textColorPrimary</string>
    <string name="sample_text_secondary">android:textColorSecondary</string>
    <string name="sample_text_tertiary">android:textColorTertiary</string>
    <string name="sample_text_link"><a href="https://www.example.com">android:textColorLink</a></string>
    <string name="sample_text_summary_inverse">For each text color attribute, there is a corresponding inverse color.</string>
    <string name="sample_text_primary_inverse">android:textColorPrimaryInverse</string>
    <string name="sample_text_secondary_inverse">android:textColorSecondaryInverse</string>
    <string name="sample_text_tertiary_inverse">android:textColorTertiaryInverse</string>
    <string name="sample_text_link_inverse">android:textColorLinkInverse</string>
    <string name="checkbox_title">Checkbox</string>
    <string name="checkbox_description">colorControlNormal, colorAccent</string>
    <string name="radio_title">Radio Button</string>
    <string name="radio_description">colorControlNormal, colorAccent, colorControlHighlight</string>
    <string name="switch_title">Switch (SwitchCompat)</string>
    <string name="switch_description">colorSwitchThumbNormal, colorAccent, colorForeground, colorControlHighlight</string>
    <string name="buttonDefault">Default</string>
    <string name="buttonColored">Colored</string>
    <string name="buttonBorderless">Borderless</string>
    <string name="dialog_title">Cake?</string>
    <string name="dialog_text">This is some dialog text about cake.</string>
    <string name="dialog_action">@string/ok</string>
    <string name="try_theme">Try Theme</string>

</resources>
